# matrix-operations

./: .gitignore  .gitmodules  CMakeLists.txt  CMatrix.h  data-large.txt  example-test.cpp  main.cpp
src/: CMatrix.h  CMatrixIdentity.h  CMatrixSquare.h  CVector.h  main.cpp
test/: test_matrix.cpp  test_vector.cpp
